--- a/blogs/perspectiveMain.html
+++ b/blogs/perspectiveMain.html
@@ -3,10 +3,10 @@
 	<head>
 		<meta charset="utf-8">
 
-		<title> Rabbit Hole Rant</title>
+		<title> </title>
 
 		<!--ADD CSS INFO
-		<link rel="stylesheet" type="text/css" src="CITE HERE" />
+		<link rel="stylesheet" type="text/css" "CITE HERE" />
 		-->
 
 	</head>
@@ -22,17 +22,11 @@
 	
 	<body>
 		<header>
-			<h1> Welcome to Rabbit Hole Rant</h1>
-			<h4> designed by: Danielle David</h4>
+			<h1> </h1>
 		</header>
 		
-			<!--<a href="">&heart; </a>-->
-		<nav> 
-			<a href="http://www.rabbitholerant.blogspot.com">&heart;blogger</a>
-			<a href="http://www.rabbitholerant.com/blog">&heart; </a>
-		</nav>
 		<main> 
-			The RabbitHoleRant is currently learning how to be a legit main page. Feel free to choose from the 				navigation while the main 
+	
 		</main>
 
 		<footer>
