--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
 		
 			<!--<a href="">&heart; </a>-->
 		<nav> 
-			<a href="http://www.rabbitholerant.blogspot.com">&heart;blogger</a>
-			<a href="http://www.rabbitholerant.com/blog">&heart; </a>
+			&heart;<a href="http://www.rabbitholerant.blogspot.com">blogger</a>
+			&heart;<a href="http://www.rabbitholerant.com/blog">In House Blog</a>
 		</nav>
 		<main> 
 			The RabbitHoleRant is currently learning how to be a legit main page. Feel free to choose from the 				navigation while the main 
