--- a/index.html
+++ b/index.html
@@ -23,16 +23,17 @@
 	<body>
 		<header>
 			<h1> Welcome to Rabbit Hole Rant</h1>
-			<h4> designed by: Danielle David</h4>
+			<h4> a book blog by Danielle David</h4>
 		</header>
 		
 			<!--<a href="">&heart; </a>-->
 		<nav> 
-			&heart;<a href="http://www.rabbitholerant.blogspot.com">blogger</a>
-			&heart;<a href="http://www.rabbitholerant.com/blog">In House Blog</a>
+			&hearts;<a href="http://www.rabbitholerant.blogspot.com">blogger</a>
+			&hearts;<a href="http://www.rabbitholerant.com/blog">In House Blog</a>
 		</nav>
 		<main> 
-			The RabbitHoleRant is currently learning how to be a legit main page. Feel free to choose from the 				navigation while the main 
+			The RabbitHoleRant is currently learning how to be a legit main page. Feel free to choose from the navigation while i am constructing the main 	
+				page.
 		</main>
 
 		<footer>
