--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
 
 		<title> Rabbit Hole Rant</title>
 
-		<!--ADD CSS INFO
-		<link rel="stylesheet" type="text/css" src="CITE HERE" />
-		-->
+		<!--ADD CSS INFO-->
+		<link rel="stylesheet" type="text/css" src="/styles/index.css" />
+		
 
 	</head>
 	<!-- Tags you might need in the body
