--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 		<title> Rabbit Hole Rant</title>
 
 		<!--ADD CSS INFO-->
-		<link rel="stylesheet" type="text/css" src="styles/index.css"/>
+		<link rel="stylesheet" type="text/css" src="index.css"/>
 		
 
 	</head>
