--- a/index.html
+++ b/index.html
@@ -2,13 +2,9 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8">
-
 		<title> Rabbit Hole Rant</title>
-
 		<!--ADD CSS INFO-->
-		<link rel="stylesheet" type="text/css" src="index.css"/>
-		
-
+		<link href="index.css" rel="stylesheet" type="text/css"/>
 	</head>
 	<!-- Tags you might need in the body
 		<div> </div> 
@@ -17,9 +13,7 @@
 		<img style="IMG STYLE? BORDER?" src="IMG SRC" alt="<i>IMG CAPTION</i>">
 		<nav> </nav>
 		<figure> </figure>
-		
 	-->
-	
 	<body>
 		<header>
 			<h1> Welcome to Rabbit Hole Rant</h1>
