--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 				text-align: center;
 				font-size: 200%;
 				margin-top: 50px;
-				<!--border-top: 100px solid salmon-->
+				<!--border-top: 100px solid salmon--->
 			}	
 			body{
 				margin-top:100px;
