--- a/index.html
+++ b/index.html
@@ -64,6 +64,8 @@
 				border-left: 20px dotted white;	
 				float: right;
 				width: 100%;
+				margin-left: 20px;
+				margin-right: 20px;
 			}
 			main p{
 				display:inline-block;
