project milestone 4 updates

--- a/whenchickenheadscomehometoroost.html
+++ b/whenchickenheadscomehometoroost.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8">
-		<title> Rabbit Hole Rant</title>
+		<title> Rabbit Hole Rant When Chickenheads Come Home To Roost Book Review</title>
 		<link href="https://fonts.googleapis.com/css2?family=Amatic+SC&family=Poiret+One&display=swap" rel="stylesheet">
 		<link rel="stylesheet" type="text/css" href="index.css"/>
 	</head>
@@ -17,7 +17,7 @@
 	<body>
 		<header>
 			<h1>Rabbit Hole Rant <img src="images/rhrlabel.png" alt="rhr" height="50p" width="50" /></h1> 
-			<h2>A NonFiction Alter</h2>
+			<h2>A NonFiction Altar</h2>
 		</header>
 		
 			<!--<a href=""> </a>-->
@@ -34,10 +34,20 @@
 				<h3>"When Chickenheads Come Home To Roost" Book Review</h3>
 				<p>
 					<img class="blogimg" src="blogs/reviews/chickenheadsbookcover.jpg" alt="chickenheads book cover" /><br>
-					I love that there are books like these to help us to understand ourselves and share our experiences although I found that I disliked the same points in this book that I disliked in Brittany Cooper's <a href="https://www.goodreads.com/book/show/33574165-eloquent-rage?from_search=true&from_srp=true&qid=1VZk6dDSey&rank=1">"Eloquent Rage"</a>. I don't believe intimate relationships should have taken up so much space. I also disliked the spirit of elitism which the author attempted to avoid, yet and still it lingered throughout. I would like to think the main point of feminism is to afford women the freedom to be individuals and evaluated on a case by case basis. This is including but not limited to being freed from the discrimination bred by a man's limited perspective and freedom from subjugation due to his inability to see our value.
-					I did appreciate this book and we all wanted to love it but I finished this book feeling more frustrated than liberated. She explains how black women, knowing the hardships that have formed many black men to be toxic, should love and support them from a distance without always inviting them intimately..and she should have stopped there. She goes on to discuss how the black family is broken, the lessons her mother gave her on relationships, and whether men should also have rights to unborn children. Morgan was truly on to something, but she never quite got there.  Black feminist are tasked with maintaining an allegiance to black lives matter, a movement which holds it protests with the strength of black women at its foundation but places her secondary more often than equal. These are the matters I was hoping the author would express touch on with a possible deviation in perspective. I was disappointed that she encouraged woman to stroke the egos of men as long as it proves to be mutually beneficial. This includes the arguement of letting him pay the bill because if you paid his ego would bruised or he wouldnt feel like he was a man. I thought the entire point of feminism was to effectively say "I should'nt have to be less of me for you to be more of you". If you want to let your man pay for dinner because youre selfish, broke, or want to be appreciated, then do it.
-					BUT! if you have to let your man pay for dinner simply because he would be emasculated by not doing so, or for the fear of being viewed as masculine yourself, then expect to subjugated to his masculinity for the duration of the relationship. The latter part of this book is all about compromises with men of this sort. Women that are on this side of the field will compromise because they feel like being themselves runs the already limited available men away.. and it does. But should we have such a crippling fear of being single that the compromises we make with men compromise ourselves? I think not. Paying for dinner is not apart of who i am but where will this man's mindstate lead you? Suppression and servitude is the answer. The solution is not compromise but to stop placing so much emphasis on intimate monogamous relationships. Intimacy is not a cause for which you should sell soul for...but, more on this later. 
-					I expected clarity and representation and with the reverence this book was given, i generally expected more. 
+					I love books that help us to understand ourselves and share our experiences. I enjoyed how Joan Morgan opened us up for discussion, clearing the air  and making room for our voices. Nonetheless,<br>
+					I disliked the very points in this testament that I disliked in Brittany Cooper's <a href="https://www.goodreads.com/book/show/33574165-eloquent-rage?from_search=true&from_srp=true&qid=1VZk6dDSey&rank=1">"Eloquent Rage"</a>. Both these books make a point to glorify intimate relationships, which takes up a lot of space, and they house the spirit of elitism which this author attempted to avoid but ultimately.. failed. I would like to think the main point of feminism is to afford women the freedom to be individuals and to be evaluated on a case by case basis. This is including, but not limited to, being freed from the discrimination bred by a man's limited perspective and freedom from subjugation due to his inability to see our value. I did appreciate this book in some ways and i believe we all wanted to love it but I finished this book feeling more frustrated than liberated. <br>
+					She begins by explaining how black women in knowing the hardships that have forced many black men into toxicity, should love and support them from a distance without always inviting them for intimacy..<br>
+					...she should've stopped there. <br>
+					She goes on to discuss how the black family is broken, the lessons her mother gave her on relationships, and whether men should also have rights to unborn children. <br>
+					She was beginning to catch on to something, but definitely no <a href="https://www.goodreads.com/book/show/250792.Ain_t_I_a_Woman?ac=1&from_search=true&qid=iLmmXGFFf4&rank=3hook.">Hook</a>.
+					Black feminist are tasked with maintaining an allegiance to black lives matter, a movement which holds it's protests with the strength of black women at its foundation but places her secondary more often than equal. These are the matters I was hoping the author would address with some deviation. I was disappointed that she encouraged woman to stroke the egos of men as long as it proves to be a mutual benefit. This includes the argument to allow a man to pay the bill because, if you paid, he wouldn't feel like he was a man. I thought the entire point of feminism was to effectively say "I shouldn't have to be less of me for you to be more of you". If you want to let your man pay for dinner because you're:<br>
+					selfish, <br>
+					broke, <br>
+					or want to be appreciated,<br>
+					then power to you!<br>
+					BUT if you let your man pay for dinner simply because he would be emasculated by not doing so, or for the fear of being viewed as masculine yourself, then expect to subjugated to his masculinity for the duration of the relationship. The latter portion of this book is all about compromises with men of this sort. Women that are on this side of the field will compromise because they feel like being themselves runs the, already limited availability of, men away.. and it does. But should we allow the crippling fear of being single to hoax us into compromises with men that compromise ourselves? Naaah. Paying for dinner is not apart of who i am but if allowed to roam, where will this man's limited mind state lead you? Suppression and servitude. The solution is not to compromise with these men but to stop attributing so much of your self value to maintaining intimate monogamous relationships. Intimacy is not a cause for which you should sell your soul for BUT, i digress.<br>
+					With the reverence this book was given I expected much more representation and direction. With that being said, this is a subject matter that is not easily tackled by any one person but requires a team of insightful black women to conquer. I look forward to exploring the abundance of perspectives on black feminism written by other authors. <br>
+					Will you stroke his ego? let me know below.
 				</p>
 		</main>
 		<footer> footer
