--- a/thebody.html
+++ b/thebody.html
@@ -33,7 +33,7 @@
 				<h3>"The Body" by Bill Bryson<br> Book Review</h3>
 				<p>
 					<img class="blogimg" src="images/thebody.jpg" alt="The Body book cover" /><br>
-					This book is a for sure winner! The body puts so many things into perspective and I found myself saying "oh wow" so many times throughout this book. I would call this "The lazy doctors guide to the body" or it could be a perfect "cliff notes" for the body. Very consise and well written, this book flows from one body part to the next seemlessly. Only bad note I have about this book is that there just wasnt enough. I would have liked to have a second expanded version of this book that goes more in depth with each portion of the body. I seriously believe that most people would enjoy this book and emerge from the pages feeling a little more sure of themselves. 
+					This book is a for sure winner! The body puts so many things into perspective and I found myself saying "oh wow" so many times throughout this book. I would call this "The lazy doctors guide to the body" or it could be a perfect "cliff notes" for the body. Very concise and well written, this book flows from one body part to the next seemlessly. Only bad note I have about this book is that there just wasnt enough. I would have liked to have a second expanded version of this book that goes more in depth with each portion of the body. I seriously believe that most people would enjoy this book and emerge from the pages feeling a little more sure of themselves. 
 				</p>
 		</main>
 		<footer> footer
