added css and html validation

--- a/index.html
+++ b/index.html
@@ -36,11 +36,11 @@
 				<div class="recentcontent">
 				<p> 
 					<a href="https://www.rabbitholerant.com/thebody">
-						<img src="images/thebody.jpg" alt="rhr" /><br>"The Body" Review<br><span id="authordate"><br>Danielle <br><i>July 5, 2020</i></span>
+						<img src="images/thebody.jpg" alt="rhr" /><br>"The Body" Review<br><span id="authordate"><br>Review by Danielle David <br><i>July 5, 2020</i></span>
 					</a>
 				</p>
 				<p><a href="https://www.rabbitholerant.com/whenchickenheadscomehometoroost">
-					<img src="images/chickenheadsbookcover.jpg" alt="chickenheads book cover" /><br><br>"When ChickenHeads Come Home To Roost" Review<br> <span id="authordate"><br>Review by Danielle <br><i>June 15, 2020</i></span>				</a>
+					<img src="images/chickenheadsbookcover.jpg" alt="chickenheads book cover" /><br><br>"When ChickenHeads Come Home To Roost" Review<br> <span id="authordate"><br>Review by Danielle David<br><i>June 15, 2020</i></span>				</a>
 				</p>
 				<!--
 				<p>
@@ -58,7 +58,18 @@
 				-->
 				</div>
 		</main>
-		<footer> footer
+		<footer> 
+			<span style="font-weight:bold;">Designed by: Danielle David</span>
+			<br>
+			<!--HTML VALIDATION-->
+			<a href="http://validator.w3.org/check?uri=referer" style = "text-decoration: none">
+          			<img src="images/button_html5_yellow.gif" alt="Validate HTML"/>
+			</a>
+		
+			<!--CSS VALIDATION-->
+			<a href="http://jigsaw.w3.org/css-validator/check/referer" style = "text-decoration: none">
+         			<img src="images/button_CSS_yellow.png" width="85" height="31" alt="Validate CSS" />
+			</a>
 		</footer>
 		</div>
 	</body>
