--- a/thebody.html
+++ b/thebody.html
@@ -36,7 +36,18 @@
 					This book is a for sure winner! The body puts so many things into perspective and I found myself saying "oh wow" so many times throughout this book. I would call this "The lazy doctors guide to the body" or it could be a perfect "cliff notes" for the body. Very concise and well written, this book flows from one body part to the next seemlessly. Only bad note I have about this book is that there just wasnt enough. I would have liked to have a second expanded version of this book that goes more in depth with each portion of the body. I seriously believe that most people would enjoy this book and emerge from the pages feeling a little more sure of themselves. 
 				</p>
 		</main>
-		<footer> footer
+		<footer> 
+			<span style="font-weight:bold;">Designed by: Danielle David</span>
+			<br>
+			<!--HTML VALIDATION-->
+			<a href="http://validator.w3.org/check?uri=referer" style = "text-decoration: none">
+          			<img src="images/button_html5_yellow.gif" alt="Validate HTML"/>
+			</a>
+		
+			<!--CSS VALIDATION-->
+			<a href="http://jigsaw.w3.org/css-validator/check/referer" style = "text-decoration: none">
+         			<img src=images/button_CSS_yellow.png" width="85" height="31" alt="Validate CSS" />
+			</a>
 		</footer>
 		</div>
 	</body>
