--- a/whenchickenheadscomehometoroost.html
+++ b/whenchickenheadscomehometoroost.html
@@ -50,7 +50,18 @@
 					Will you stroke his ego? let me know below.
 				</p>
 		</main>
-		<footer> footer
+		<footer>
+			span style="font-weight:bold;">Designed by: Danielle David</span>
+			<br>
+			<!--HTML VALIDATION-->
+			<a href="http://validator.w3.org/check?uri=referer" style = "text-decoration: none">
+          			<img src="images/button_html5_yellow.gif" alt="Validate HTML"/>
+			</a>
+		
+			<!--CSS VALIDATION-->
+			<a href="http://jigsaw.w3.org/css-validator/check/referer" style = "text-decoration: none">
+         			<img src="images/button_CSS_yellow.png" width="85" height="31" alt="Validate CSS" />
+			</a>
 		</footer>
 		</div>
 	</body>
