must reads added

--- a/whenchickenheadscomehometoroost.html
+++ b/whenchickenheadscomehometoroost.html
@@ -25,8 +25,7 @@
 			<ul>
 				<li><a href="http://www.rabbitholerant.com">Home</a></li>
 				<li><a href="http://www.rabbitholerant.com/about_me">About Me</a></li>
-				<li><a href="http://www.rabbitholerant.com/must_reads">Must Reads</a></li>
-				<li><a href="http://www.rabbitholerant.com/blog">All Blog Posts</a></li>
+				<li><a href="http://www.rabbitholerant.com/mustreads">Must Reads</a></li>
 			</ul>
 		</nav>
 		<div class="toend">
@@ -51,7 +50,7 @@
 				</p>
 		</main>
 		<footer>
-			span style="font-weight:bold;">Designed by: Danielle David</span>
+			<span style="font-weight:bold;">Designed by: Danielle David</span>
 			<br>
 			<!--HTML VALIDATION-->
 			<a href="http://validator.w3.org/check?uri=referer" style = "text-decoration: none">
