--- a/index.html
+++ b/index.html
@@ -25,8 +25,7 @@
 			<ul>
 				<li><a href="http://www.rabbitholerant.com">Home</a></li>
 				<li><a href="http://www.rabbitholerant.com/about_me">About Me</a></li>
-				<li><a href="http://www.rabbitholerant.com/must_reads">Must Reads</a></li>
-				<li><a href="http://www.rabbitholerant.com/blog">All Blog Posts</a></li>
+				<li><a href="http://www.rabbitholerant.com/mustreads">Must Reads</a></li>
 			</ul>
 		</nav>
 		<div class="toend">
