--- a/aboutme.html
+++ b/aboutme.html
@@ -2,18 +2,11 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8">
-		<title> Rabbit Hole Rant Must Reads</title>
+		<title> Rabbit Hole Rant About Me</title>
 		<link href="https://fonts.googleapis.com/css2?family=Amatic+SC&family=Poiret+One&display=swap" rel="stylesheet">
 		<link rel="stylesheet" type="text/css" href="index.css"/>
 	</head>
-	<!-- Tags you might need in the body
-		<div> </div> 
-		<p> </p>
-		<a href ="LINK">LINK NAME </a>
-		<img style="IMG STYLE? BORDER?" src="IMG SRC" alt="<i>IMG CAPTION</i>">
-		<nav> </nav>
-		<figure> </figure>
-	-->
+
 	<body>
 		<header>
 			<h1>Rabbit Hole Rant <img src="images/rhrlabel.png" alt="rhr" height="50p" width="50" /></h1> 
@@ -29,7 +22,7 @@
 		</nav>
 		<div class="toend">
 		<main class="blogmain"> 
-				<h3>Must Reads</h3>
+				<h3>About Me</h3>
 				<p>
 					Coming Soon!!!!!!!!!!
 				</p>
