--- a/whenchickenheadscomehometoroost.html
+++ b/whenchickenheadscomehometoroost.html
@@ -24,7 +24,7 @@
 		<nav> 
 			<ul>
 				<li><a href="http://www.rabbitholerant.com">Home</a></li>
-				<li><a href="http://www.rabbitholerant.com/about_me">About Me</a></li>
+				<li><a href="http://www.rabbitholerant.com/aboutme">About Me</a></li>
 				<li><a href="http://www.rabbitholerant.com/mustreads">Must Reads</a></li>
 			</ul>
 		</nav>
