must reads table update

--- a/mustreads.html
+++ b/mustreads.html
@@ -29,9 +29,30 @@
 		</nav>
 		<div class="toend">
 		<main class="blogmain"> 
-				<h3>Must Reads</h3>
 				<p>
-					Coming Soon!!!!!!!!!!
+					<table>
+						<th colspan="2">Must Reads</th>
+						<tr>
+							<td>Title and Author</td>
+							<td>Rating</td>
+						</tr>
+						<tr>
+							<td></td>
+							<td></td>
+						</tr>
+						<tr>
+							<td></td>
+							<td></td>
+						</tr>
+						<tr>
+							<td></td>
+							<td></td>
+						</tr>
+						<tr>
+							<td></td>
+							<td></td>
+						</tr>
+					</table>
 				</p>
 		</main>
 		<footer> 
