html5 validation error correction

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 	-->
 	<body>
 		<header>
-			<h1>Rabbit Hole Rant <img src="images/rhrlabel.png" alt="rhr" height="50p" width="50" /></h1> 
+			<h1>Rabbit Hole Rant <img src="images/rhrlabel.png" alt="rhr" height="50" width="50" /></h1> 
 			<h2>A NonFiction Book Altar</h2>
 		</header>
 		
@@ -45,13 +45,13 @@
 				<p>
 					<a href="http://www.rabbitholerant.com">
 					<img src="images/rhrlabel.png" alt="rhr" /> content content content content content content content content content<br>
-					<span id="authordate"><br> Review by Danielle <br><i>DATE</i></span>
+					<span class="authordate"><br> Review by Danielle <br><i>DATE</i></span>
 					</a>
 				</p>
 				<p>
 					<a href="http://www.rabbitholerant.com">
 					<img src="images/rhrlabel.png" alt="rhr" /> content content content content content content content content content<br>
-					<span id="authordate"><br> Review by Danielle <br><i>DATE</i></span>
+					<span class="authordate"><br> Review by Danielle <br><i>DATE</i></span>
 					</a>
 				</p>
 				-->
