--- a/thebody.html
+++ b/thebody.html
@@ -27,6 +27,161 @@
 				<li><a href="http://www.rabbitholerant.com/mustreads">Must Reads</a></li>
 			</ul>
 		</nav>
+		<aside class="leftaside">
+			<h2 style="font-size: 130%;">Get Email Updates!</h2>
+			<form action="/action_page.php">
+			  <label for="firstn">First name:</label><br>
+			  <input type="text" id="firstn" name="firstn" value=""><br>
+			  <label for="email">Email:</label><br>
+			  <input type="text" id="email" name="email" value=""><br><br>
+			  <input type="submit" value="Submit">
+			</form>
+		</aside>
+		<aside class="rightaside">
+			 <!-- Show static HTML/CSS as a placeholder in case js is not enabled - javascript include will override this if things work -->
+				  <style type="text/css" media="screen">
+			  .gr_custom_container_ {
+				/* customize your Goodreads widget container here*/
+				border: 1px solid gray;
+				border-radius:10px;
+				padding: 10px 5px 10px 5px;
+				background-color: #FFF;
+				color: #000;
+				width: 300px
+			  }
+			  .gr_custom_header_ {
+				/* customize your Goodreads header here*/
+				border-bottom: 1px solid gray;
+				width: 100%;
+				margin-bottom: 5px;
+				text-align: center;
+				font-size: 120%
+			  }
+			  .gr_custom_each_container_ {
+				/* customize each individual book container here */
+				width: 100%;
+				clear: both;
+				margin-bottom: 10px;
+				overflow: auto;
+				padding-bottom: 4px;
+				border-bottom: 1px solid #aaa;
+			  }
+			  .gr_custom_book_container_ {
+				/* customize your book covers here */
+				overflow: hidden;
+				height: 60px;
+				  float: left;
+				  margin-right: 4px;
+				  width: 39px;
+			  }
+			  .gr_custom_author_ {
+				/* customize your author names here */
+				font-size: 10px;
+			  }
+			  .gr_custom_tags_ {
+				/* customize your tags here */
+				font-size: 10px;
+				color: gray;
+			  }
+			  .gr_custom_rating_ {
+				/* customize your rating stars here */
+				float: right;
+			  }
+			</style>
+
+				  <div id="gr_custom_widget_">
+					  <div class="gr_custom_container_">
+				<h2 class="gr_custom_header_">
+				<a style="text-decoration: none;" rel="nofollow" href="https://www.goodreads.com/review/list/41682749-zola-love?shelf=read&amp;utm_medium=api&amp;utm_source=custom_widget">Zola &#39;s books</a>
+				</h2>
+				  <div class="gr_custom_each_container_">
+					  <div class="gr_custom_book_container_">
+						<a title="An American Marriage" rel="nofollow" href="https://www.goodreads.com/review/show/3423567156?utm_medium=api&amp;utm_source=custom_widget"><img alt="An American Marriage" border="0" src="https://i.gr-assets.com/images/S/compressed.photo.goodreads.com/books/1491493625l/33590210._SY75_.jpg" /></a>
+					  </div>
+					  <div class="gr_custom_rating_">
+						<span class=" staticStars notranslate" title="really liked it"><img alt="really liked it" src="https://www.goodreads.com/images/layout/gr_red_star_active.png" /><img alt="" src="https://www.goodreads.com/images/layout/gr_red_star_active.png" /><img alt="" src="https://www.goodreads.com/images/layout/gr_red_star_active.png" /><img alt="" src="https://www.goodreads.com/images/layout/gr_red_star_active.png" /><img alt="" src="https://www.goodreads.com/images/layout/gr_red_star_inactive.png" /></span>
+					  </div>
+					  <div class="gr_custom_title_">
+						<a rel="nofollow" href="https://www.goodreads.com/review/show/3423567156?utm_medium=api&amp;utm_source=custom_widget">An American Marriage</a>
+					  </div>
+					  <div class="gr_custom_author_">
+						by <a rel="nofollow" href="https://www.goodreads.com/author/show/292970.Tayari_Jones">Tayari Jones</a>
+					  </div>
+					  <div class="gr_custom_review_">
+						This story is loaded. Addresses blk issues but it isn't central to the storyline which I appreciated. Story is told from multiple viewpoints and you will feel for each one. One of the best stories I've read this year and did not expect t...
+					  </div>
+				  </div>
+				  <div class="gr_custom_each_container_">
+					  <div class="gr_custom_book_container_">
+						<a title="Nothing to Envy: Ordinary Lives in North Korea" rel="nofollow" href="https://www.goodreads.com/review/show/3372267113?utm_medium=api&amp;utm_source=custom_widget"><img alt="Nothing to Envy: Ordinary Lives in North Korea" border="0" src="https://i.gr-assets.com/images/S/compressed.photo.goodreads.com/books/1320449375l/6178648._SY75_.jpg" /></a>
+					  </div>
+					  <div class="gr_custom_rating_">
+						<span class=" staticStars notranslate" title="really liked it"><img alt="really liked it" src="https://www.goodreads.com/images/layout/gr_red_star_active.png" /><img alt="" src="https://www.goodreads.com/images/layout/gr_red_star_active.png" /><img alt="" src="https://www.goodreads.com/images/layout/gr_red_star_active.png" /><img alt="" src="https://www.goodreads.com/images/layout/gr_red_star_active.png" /><img alt="" src="https://www.goodreads.com/images/layout/gr_red_star_inactive.png" /></span>
+					  </div>
+					  <div class="gr_custom_title_">
+						<a rel="nofollow" href="https://www.goodreads.com/review/show/3372267113?utm_medium=api&amp;utm_source=custom_widget">Nothing to Envy: Ordinary Lives in North Korea</a>
+					  </div>
+					  <div class="gr_custom_author_">
+						by <a rel="nofollow" href="https://www.goodreads.com/author/show/785914.Barbara_Demick">Barbara Demick</a>
+					  </div>
+					  <div class="gr_custom_review_">
+						Very interesting insight. Not a dull moment. 4.5
+					  </div>
+				  </div>
+				  <div class="gr_custom_each_container_">
+					  <div class="gr_custom_book_container_">
+						<a title="Animal Farm" rel="nofollow" href="https://www.goodreads.com/review/show/3368013100?utm_medium=api&amp;utm_source=custom_widget"><img alt="Animal Farm" border="0" src="https://i.gr-assets.com/images/S/compressed.photo.goodreads.com/books/1424037542l/7613._SY75_.jpg" /></a>
+					  </div>
+					  <div class="gr_custom_rating_">
+						<span class=" staticStars notranslate" title="really liked it"><img alt="really liked it" src="https://www.goodreads.com/images/layout/gr_red_star_active.png" /><img alt="" src="https://www.goodreads.com/images/layout/gr_red_star_active.png" /><img alt="" src="https://www.goodreads.com/images/layout/gr_red_star_active.png" /><img alt="" src="https://www.goodreads.com/images/layout/gr_red_star_active.png" /><img alt="" src="https://www.goodreads.com/images/layout/gr_red_star_inactive.png" /></span>
+					  </div>
+					  <div class="gr_custom_title_">
+						<a rel="nofollow" href="https://www.goodreads.com/review/show/3368013100?utm_medium=api&amp;utm_source=custom_widget">Animal Farm</a>
+					  </div>
+					  <div class="gr_custom_author_">
+						by <a rel="nofollow" href="https://www.goodreads.com/author/show/3706.George_Orwell">George Orwell</a>
+					  </div>
+				  </div>
+				  <div class="gr_custom_each_container_">
+					  <div class="gr_custom_book_container_">
+						<a title="I, Robot (Robot, #0.1)" rel="nofollow" href="https://www.goodreads.com/review/show/3351325038?utm_medium=api&amp;utm_source=custom_widget"><img alt="I, Robot" border="0" src="https://i.gr-assets.com/images/S/compressed.photo.goodreads.com/books/1388321463l/41804._SX50_.jpg" /></a>
+					  </div>
+					  <div class="gr_custom_rating_">
+						<span class=" staticStars notranslate" title="really liked it"><img alt="really liked it" src="https://www.goodreads.com/images/layout/gr_red_star_active.png" /><img alt="" src="https://www.goodreads.com/images/layout/gr_red_star_active.png" /><img alt="" src="https://www.goodreads.com/images/layout/gr_red_star_active.png" /><img alt="" src="https://www.goodreads.com/images/layout/gr_red_star_active.png" /><img alt="" src="https://www.goodreads.com/images/layout/gr_red_star_inactive.png" /></span>
+					  </div>
+					  <div class="gr_custom_title_">
+						<a rel="nofollow" href="https://www.goodreads.com/review/show/3351325038?utm_medium=api&amp;utm_source=custom_widget">I, Robot</a>
+					  </div>
+					  <div class="gr_custom_author_">
+						by <a rel="nofollow" href="https://www.goodreads.com/author/show/16667.Isaac_Asimov">Isaac Asimov</a>
+					  </div>
+				  </div>
+				  <div class="gr_custom_each_container_">
+					  <div class="gr_custom_book_container_">
+						<a title="Behind Her Eyes" rel="nofollow" href="https://www.goodreads.com/review/show/3349085618?utm_medium=api&amp;utm_source=custom_widget"><img alt="Behind Her Eyes" border="0" src="https://i.gr-assets.com/images/S/compressed.photo.goodreads.com/books/1485279813l/28965131._SY75_.jpg" /></a>
+					  </div>
+					  <div class="gr_custom_rating_">
+						<span class=" staticStars notranslate" title="it was ok"><img alt="it was ok" src="https://www.goodreads.com/images/layout/gr_red_star_active.png" /><img alt="" src="https://www.goodreads.com/images/layout/gr_red_star_active.png" /><img alt="" src="https://www.goodreads.com/images/layout/gr_red_star_inactive.png" /><img alt="" src="https://www.goodreads.com/images/layout/gr_red_star_inactive.png" /><img alt="" src="https://www.goodreads.com/images/layout/gr_red_star_inactive.png" /></span>
+					  </div>
+					  <div class="gr_custom_title_">
+						<a rel="nofollow" href="https://www.goodreads.com/review/show/3349085618?utm_medium=api&amp;utm_source=custom_widget">Behind Her Eyes</a>
+					  </div>
+					  <div class="gr_custom_author_">
+						by <a rel="nofollow" href="https://www.goodreads.com/author/show/457300.Sarah_Pinborough">Sarah Pinborough</a>
+					  </div>
+				  </div>
+			  <br style="clear: both"/>
+			  <center>
+				<a rel="nofollow" href="https://www.goodreads.com/"><img alt="goodreads.com" style="border:0" src="https://www.goodreads.com/images/widget/widget_logo.gif" /></a>
+			  </center>
+			  <noscript>
+				Share <a rel="nofollow" href="https://www.goodreads.com/">book reviews</a> and ratings with Zola , and even join a <a rel="nofollow" href="https://www.goodreads.com/group">book club</a> on Goodreads.
+			  </noscript>
+			  </div>
+
+				  </div>
+				  <script src="https://www.goodreads.com/review/custom_widget/41682749.Zola%20's%20bookshelf:%20read?cover_position=&cover_size=&num_books=5&order=&shelf=&sort=&widget_bg_transparent=" type="text/javascript" charset="utf-8"></script>
+		</aside>
 		<div class="toend">
 		<main class="blogmain"> 
 				<h3>"The Body" by Bill Bryson<br> Book Review</h3>
