--- a/mustreads.html
+++ b/mustreads.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8">
-		<title> Rabbit Hole Rant Must Reads</title>
+		<title> Rabbit Hole Rant|Must Reads</title>
 		<link href="https://fonts.googleapis.com/css2?family=Amatic+SC&family=Poiret+One&display=swap" rel="stylesheet">
 		<link rel="stylesheet" type="text/css" href="index.css"/>
 	</head>
