--- a/aboutme.html
+++ b/aboutme.html
@@ -3,10 +3,11 @@
 	<head>
 		<meta charset="utf-8">
 		<title> Rabbit Hole Rant|About Me</title>
+		<link rel="icon" href="images/rhrlabel.png" type="image/gif" sizes="16x16">
 		<link href="https://fonts.googleapis.com/css2?family=Amatic+SC&family=Poiret+One&display=swap" rel="stylesheet">
 		<link rel="stylesheet" type="text/css" href="index.css"/>
 	</head>
-
+	
 	<body>
 		<header>
 			<h1>Rabbit Hole Rant <img src="images/rhrlabel.png" alt="rhr" height="50p" width="50" /></h1> 
