--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
 				<li><a href="http://www.rabbitholerant.com/aboutme">About Me</a></li>
 				<li><a href="http://www.rabbitholerant.com/mustreads">Must Reads</a></li>
 			</ul>
+			<div id="tagline">A NonFiction Altar</div>
 		</nav>
 			<h1>Rabbit Hole Rant <img src="images/rhrlabel.png" alt="rhr" height="50" width="50" /></h1> 
-			<h2>A NonFiction Book Altar</h2>
 		</header>
 		
 			<!--<a href=""> </a>-->
@@ -136,7 +136,7 @@
 		<div class="toend">
 		<main class="indexmain"> 
 			<!--<br><div id="authordate"> Book review by Danielle <i>DATE</i></div>-->
-				Recent Posts
+				<h3>Recent Posts</h3>
 				<div class="recentcontent">
 				<p> 
 					<a href="https://www.rabbitholerant.com/thebody">
