--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+	<div class="container">
 	<head>
 		<meta charset="utf-8">
 		<title>Rabbit Hole Rant</title>
@@ -177,4 +178,5 @@
 		</footer>
 		</div>
 	</body>
+	</div>
 </html>
