--- a/aboutme.html
+++ b/aboutme.html
@@ -1,19 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
+	<div class="container">
 	<head>
 		<meta charset="utf-8">
-		<title> Rabbit Hole Rant|About Me</title>
+		<title>Rabbit Hole Rant</title>
 		<link rel="icon" href="images/rhrlabel.png" type="image/gif" sizes="16x16">
 		<link href="https://fonts.googleapis.com/css2?family=Amatic+SC&family=Poiret+One&display=swap" rel="stylesheet">
 		<link rel="stylesheet" type="text/css" href="index.css"/>
 	</head>
-	
+	<!-- Tags you might need in the body
+		<div> </div> 
+		<p> </p>
+		<a href ="LINK">LINK NAME </a>
+		<img style="IMG STYLE? BORDER?" src="IMG SRC" alt="<i>IMG CAPTION</i>">
+		<nav> </nav>
+		<figure> </figure>
+	-->
 	<body>
 		<header>
-			<h1>Rabbit Hole Rant <img src="images/rhrlabel.png" alt="rhr" height="50p" width="50" /></h1> 
-			<h2>A NonFiction Altar</h2>
+			<h1>Rabbit Hole Rant<span style="font-size: 30%;"> A tour guide</span></h1>
 		</header>
-
 		<nav> 
 			<ul>
 				<li><a href="http://www.rabbitholerant.com">Home</a></li>
