--- a/index.html
+++ b/index.html
@@ -18,18 +18,16 @@
 	-->
 	<body>
 		<header>
+			<h1>Rabbit Hole Rant<span style="font-size: 30%;"> A tour guide</span></h1>
+		</header>
 		<nav> 
 			<ul>
 				<li><a href="http://www.rabbitholerant.com">Home</a></li>
 				<li><a href="http://www.rabbitholerant.com/aboutme">About Me</a></li>
 				<li><a href="http://www.rabbitholerant.com/mustreads">Must Reads</a></li>
 			</ul>
-			<div id="tagline">A NonFiction Altar</div>
 		</nav>
-			<h1>Rabbit Hole Rant <img src="images/rhrlabel.png" alt="rhr" height="50" width="50" /></h1> 
-		</header>
 		
-			<!--<a href=""> </a>-->
 		<aside class="leftaside">
 			<h2 style="font-size: 130%;">Get Email Updates!</h2>
 			<form action="/action_page.php">
