--- a/mustreads.html
+++ b/mustreads.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
+	<div class="container">
 	<head>
 		<meta charset="utf-8">
-		<title> Rabbit Hole Rant|Must Reads</title>
+		<title>Rabbit Hole Rant</title>
 		<link rel="icon" href="images/rhrlabel.png" type="image/gif" sizes="16x16">
 		<link href="https://fonts.googleapis.com/css2?family=Amatic+SC&family=Poiret+One&display=swap" rel="stylesheet">
 		<link rel="stylesheet" type="text/css" href="index.css"/>
@@ -17,10 +18,8 @@
 	-->
 	<body>
 		<header>
-			<h1>Rabbit Hole Rant <img src="images/rhrlabel.png" alt="rhr" height="50p" width="50" /></h1> 
-			<h2>A NonFiction Altar</h2>
+			<h1>Rabbit Hole Rant<span style="font-size: 30%;"> A tour guide</span></h1>
 		</header>
-
 		<nav> 
 			<ul>
 				<li><a href="http://www.rabbitholerant.com">Home</a></li>
@@ -134,31 +133,29 @@
 		</aside>
 		<div class="toend">
 		<main class="blogmain"> 
-				<p>
-					<table>
-						<th colspan="2">Must Reads</th>
-						<tr>
-							<td>Title and Author</td>
-							<td>Rating</td>
-						</tr>
-						<tr>
-							<td></td>
-							<td></td>
-						</tr>
-						<tr>
-							<td></td>
-							<td></td>
-						</tr>
-						<tr>
-							<td></td>
-							<td></td>
-						</tr>
-						<tr>
-							<td></td>
-							<td></td>
-						</tr>
-					</table>
-				</p>
+			<h3>Must Reads</h3>
+			<table>
+				<tr>
+					<th>Title and Author</th>
+					<th>Rating</th>
+				</tr>
+				<tr>
+					<td></td>
+					<td></td>
+				</tr>
+				<tr>
+					<td></td>
+					<td></td>
+				</tr>
+				<tr>
+					<td></td>
+					<td></td>
+				</tr>
+				<tr>
+					<td></td>
+					<td></td>
+				</tr>
+			</table>	
 		</main>
 		<footer> 
 			<span style="font-weight:bold;">Designed by: Danielle David</span>
