--- a/thebody.html
+++ b/thebody.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
+	<div class="container">
 	<head>
 		<meta charset="utf-8">
-		<title> Rabbit Hole Rant|The Body Book Review</title>
+		<title>Rabbit Hole Rant</title>
 		<link rel="icon" href="images/rhrlabel.png" type="image/gif" sizes="16x16">
 		<link href="https://fonts.googleapis.com/css2?family=Amatic+SC&family=Poiret+One&display=swap" rel="stylesheet">
 		<link rel="stylesheet" type="text/css" href="index.css"/>
@@ -17,14 +18,12 @@
 	-->
 	<body>
 		<header>
-			<h1>Rabbit Hole Rant <img src="images/rhrlabel.png" alt="rhr" height="50p" width="50" /></h1> 
-			<h2>A NonFiction Altar</h2>
+			<h1>Rabbit Hole Rant<span style="font-size: 30%;"> A tour guide</span></h1>
 		</header>
-
 		<nav> 
 			<ul>
 				<li><a href="http://www.rabbitholerant.com">Home</a></li>
-				<li><a href="http://www.rabbitholerant.com/about_me">About Me</a></li>
+				<li><a href="http://www.rabbitholerant.com/aboutme">About Me</a></li>
 				<li><a href="http://www.rabbitholerant.com/mustreads">Must Reads</a></li>
 			</ul>
 		</nav>
