--- a/whenchickenheadscomehometoroost.html
+++ b/whenchickenheadscomehometoroost.html
@@ -1,20 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
+	<div class="container">
 	<head>
 		<meta charset="utf-8">
-		<title> Rabbit Hole Rant|When Chickenheads Come Home To Roost Book Review</title>
+		<title>Rabbit Hole Rant</title>
 		<link rel="icon" href="images/rhrlabel.png" type="image/gif" sizes="16x16">
 		<link href="https://fonts.googleapis.com/css2?family=Amatic+SC&family=Poiret+One&display=swap" rel="stylesheet">
 		<link rel="stylesheet" type="text/css" href="index.css"/>
 	</head>
-
+	<!-- Tags you might need in the body
+		<div> </div> 
+		<p> </p>
+		<a href ="LINK">LINK NAME </a>
+		<img style="IMG STYLE? BORDER?" src="IMG SRC" alt="<i>IMG CAPTION</i>">
+		<nav> </nav>
+		<figure> </figure>
+	-->
 	<body>
 		<header>
-			<h1>Rabbit Hole Rant <img src="images/rhrlabel.png" alt="rhr" height="50p" width="50" /></h1> 
-			<h2>A NonFiction Altar</h2>
+			<h1>Rabbit Hole Rant<span style="font-size: 30%;"> A tour guide</span></h1>
 		</header>
-		
-			<!--<a href=""> </a>-->
 		<nav> 
 			<ul>
 				<li><a href="http://www.rabbitholerant.com">Home</a></li>
@@ -128,7 +133,7 @@
 		</aside>
 		<div class="toend">
 		<main class="blogmain"> 
-				<h3>"When Chickenheads Come Home To Roost" Book Review</h3>
+				<h3>"When Chickenheads Come Home To Roost" <br>Book Review</h3>
 				<p>
 					<img class="blogimg" src="images/chickenheadsbookcover.jpg" alt="chickenheads book cover" /><br>
 					I love books that help us to understand ourselves and share our experiences. I enjoyed how Joan Morgan opened us up for discussion, clearing the air  and making room for our voices. Nonetheless,<br>
