update to about me

--- a/aboutme.html
+++ b/aboutme.html
@@ -135,7 +135,9 @@
 		<main class="blogmain"> 
 				<h3>About Me</h3>
 				<p>
-					Coming Soon!!!!!!!!!!
+				<img class="blogimg" src="images/christmas2019image.jpg" alt="Danielle 2019" /><br>Hello! My I'm Danielle!<br>
+					Although my list of hobbies is endless, reading is one that I cherish the most. Libraries are some of my favorite places on this entire planet and I hope one day I will be the librarian or own a bookshop of my own. My love for reading did not blossom until my teenage years and started with mostly non-fiction but I've now started to incorporate more fiction as well. I love a book that can provide perspective and make me question myself and the world around me. Make me ponder my existence, add a cup of tea and I'm a happy girl. The best books I've read in the last year are Friday Black by Nana Kwame Adjei-Brenyah and Silent Patient by Alex Michaelides which are both fiction. I can read just about anything but I generally reach for science-fiction, astronomy, philosophy, psychological thrillers, and generally anything with a twist. Thanks for visiting.
+					<br>
 				</p>
 		</main>
 		<footer> 
