--- a/mustreads.html
+++ b/mustreads.html
@@ -140,20 +140,16 @@
 					<th>Rating</th>
 				</tr>
 				<tr>
-					<td></td>
-					<td></td>
+					<td>On Writing<br>Stephen King</td>
+					<td>5/5</td>
 				</tr>
 				<tr>
-					<td></td>
-					<td></td>
+					<td>Friday Black <br>Nana Knawe Adjei-Brenyah</td>
+					<td>5/5</td>
 				</tr>
 				<tr>
-					<td></td>
-					<td></td>
-				</tr>
-				<tr>
-					<td></td>
-					<td></td>
+					<td>The Life Changing Magic of Tidying Up<br>Marie Kondo</td>
+					<td>5/5</td>
 				</tr>
 			</table>	
 		</main>
