update to mustreads

--- a/mustreads.html
+++ b/mustreads.html
@@ -140,15 +140,15 @@
 					<th>Rating</th>
 				</tr>
 				<tr>
-					<td>On Writing<br>Stephen King</td>
+					<td>"On Writing"<br>by Stephen King</td>
 					<td>5/5</td>
 				</tr>
 				<tr>
-					<td>Friday Black <br>Nana Knawe Adjei-Brenyah</td>
+					<td>"Friday Black"<br>by Nana Knawe Adjei-Brenyah</td>
 					<td>5/5</td>
 				</tr>
 				<tr>
-					<td>The Life Changing Magic of Tidying Up<br>Marie Kondo</td>
+					<td>"The Life Changing Magic of Tidying Up"<br>by Marie Kondo</td>
 					<td>5/5</td>
 				</tr>
 			</table>	
