--- a/thebody.html
+++ b/thebody.html
@@ -3,19 +3,12 @@
 	<div class="container">
 	<head>
 		<meta charset="utf-8">
-		<title>Rabbit Hole Rant</title>
+		<title>Rabbit Hole Rant|Book Review</title>
 		<link rel="icon" href="images/rhrlabel.png" type="image/gif" sizes="16x16">
 		<link href="https://fonts.googleapis.com/css2?family=Amatic+SC&family=Poiret+One&display=swap" rel="stylesheet">
 		<link rel="stylesheet" type="text/css" href="index.css"/>
 	</head>
-	<!-- Tags you might need in the body
-		<div> </div> 
-		<p> </p>
-		<a href ="LINK">LINK NAME </a>
-		<img style="IMG STYLE? BORDER?" src="IMG SRC" alt="<i>IMG CAPTION</i>">
-		<nav> </nav>
-		<figure> </figure>
-	-->
+
 	<body>
 		<header>
 			<h1>Rabbit Hole Rant<span style="font-size: 30%;"> A tour guide</span></h1>
@@ -131,7 +124,6 @@
 				  </div>
 				  <script src="https://www.goodreads.com/review/custom_widget/41682749.Zola%20's%20bookshelf:%20read?cover_position=&cover_size=&num_books=5&order=&shelf=&sort=&widget_bg_transparent=" type="text/javascript" charset="utf-8"></script>
 		</aside>
-		<div class="toend">
 		<main class="blogmain"> 
 				<h3>"The Body" by Bill Bryson<br> Book Review</h3>
 				<p>
@@ -152,6 +144,6 @@
          			<img src="images/button_CSS_yellow.png" width="85" height="31" alt="Validate CSS" />
 			</a>
 		</footer>
-		</div>
 	</body>
+	</div>
 </html>
