--- a/mustreads.html
+++ b/mustreads.html
@@ -3,19 +3,12 @@
 	<div class="container">
 	<head>
 		<meta charset="utf-8">
-		<title>Rabbit Hole Rant</title>
+		<title>Rabbit Hole Rant|Must Reads</title>
 		<link rel="icon" href="images/rhrlabel.png" type="image/gif" sizes="16x16">
 		<link href="https://fonts.googleapis.com/css2?family=Amatic+SC&family=Poiret+One&display=swap" rel="stylesheet">
 		<link rel="stylesheet" type="text/css" href="index.css"/>
 	</head>
-	<!-- Tags you might need in the body
-		<div> </div> 
-		<p> </p>
-		<a href ="LINK">LINK NAME </a>
-		<img style="IMG STYLE? BORDER?" src="IMG SRC" alt="<i>IMG CAPTION</i>">
-		<nav> </nav>
-		<figure> </figure>
-	-->
+
 	<body>
 		<header>
 			<h1>Rabbit Hole Rant<span style="font-size: 30%;"> A tour guide</span></h1>
