--- a/index.html
+++ b/index.html
@@ -132,11 +132,11 @@
 				<div class="recentcontent">
 				<p> 
 					<a href="https://www.rabbitholerant.com/thebody">
-						<img src="images/thebody.jpg" alt="rhr" /><br>"The Body" Review<br><span id="authordate"><br>Review by Danielle David <br><i>July 5, 2020</i></span>
+						<img src="images/thebody.jpg" alt="rhr" /><br>"The Body" Review<br><span class="authordate"><br>Review by Danielle David <br><i>July 5, 2020</i></span>
 					</a>
 				</p>
 				<p><a href="https://www.rabbitholerant.com/whenchickenheadscomehometoroost">
-					<img src="images/chickenheadsbookcover.jpg" alt="chickenheads book cover" /><br><br>"When ChickenHeads Come Home To Roost" Review<br> <span id="authordate"><br>Review by Danielle David<br><i>June 15, 2020</i></span>				</a>
+					<img src="images/chickenheadsbookcover.jpg" alt="chickenheads book cover" /><br>"When ChickenHeads Come Home To Roost" Review<br> <span class="authordate"><br>Review by Danielle David<br><i>June 15, 2020</i></span>				</a>
 				</p>
 				<!--
 				<p>
