--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 				  </div>
 				  <div class="gr_custom_each_container_">
 					  <div class="gr_custom_book_container_">
-						<a title="Animal Farm" rel="nofollow" href="https://www.goodreads.com/review/show/3368013100?utm_medium=api&amp;utm_source=custom_widget"><img alt="Animal Farm" border="0" src="https://i.gr-assets.com/images/S/compressed.photo.goodreads.com/books/1424037542l/7613._SY75_.jpg" /></a>
+						<a title="Animal Farm" rel="nofollow" href="https://www.goodreads.com/review/show/3368013100?utm_medium=api&amp;utm_source=custom_widget"><img alt="Animal Farm" src="https://i.gr-assets.com/images/S/compressed.photo.goodreads.com/books/1424037542l/7613._SY75_.jpg" /></a>
 					  </div>
 					  <div class="gr_custom_rating_">
 						<span class=" staticStars notranslate" title="really liked it"><img alt="really liked it" src="https://www.goodreads.com/images/layout/gr_red_star_active.png" /><img alt="" src="https://www.goodreads.com/images/layout/gr_red_star_active.png" /><img alt="" src="https://www.goodreads.com/images/layout/gr_red_star_active.png" /><img alt="" src="https://www.goodreads.com/images/layout/gr_red_star_active.png" /><img alt="" src="https://www.goodreads.com/images/layout/gr_red_star_inactive.png" /></span>
@@ -115,7 +115,6 @@
 				  </div>
 			  <br style="clear: both"/>
 				<a rel="nofollow" href="https://www.goodreads.com/"><img alt="goodreads.com" style="border:0" src="https://www.goodreads.com/images/widget/widget_logo.gif" /></a>
-			  </center>
 			  <noscript>
 				Share <a rel="nofollow" href="https://www.goodreads.com/">book reviews</a> and ratings with Zola , and even join a <a rel="nofollow" href="https://www.goodreads.com/group">book club</a> on Goodreads.
 			  </noscript>
